--- a/Server/package.json
+++ b/Server/package.json
@@ -8,12 +8,13 @@
     "jison": "jison ./src/utils/Interpreter/analizador.jison && copy analizador.js build\\utils\\Interpreter && rimraf analizador.js",
     "build": "rimraf ./build&&tsc&&npm run jison",
     "test": "echo \"Error: no test specified\" && exit 1"
-    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@diagrams-ts/graphviz-cli-renderer": "^0.5.0",
+    "@hpcc-js/wasm": "^2.14.1",
     "body-parser": "^1.20.2",
     "config": "^3.3.9",
     "cors": "^2.8.5",
@@ -21,14 +22,19 @@
     "ejs": "^3.1.9",
     "electron": "^27.0.0",
     "express": "^4.18.2",
+    "graphviz": "^0.0.9",
+    "graphviz-cli": "^2.0.0",
     "jison": "^0.4.18",
     "lodash": "^4.17.21",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ts-graphviz": "^1.8.1",
+    "viz.js": "^2.1.2"
   },
   "devDependencies": {
     "@types/config": "^3.3.1",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.19",
+    "@types/graphviz": "^0.0.37",
     "@types/lodash": "^4.14.199",
     "@types/morgan": "^1.9.6",
     "@types/node": "^20.8.6",
